--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </ul>
           </li>
 
+          <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact Us</a></li>
+
+
           <li class="nav-item"><a class="nav-link text-white" href="signup.html">Sign Up</a></li>
           <!-- <li class="nav-item position-relative">
             <a class="nav-link text-white" href="#">
